添加 StudentSide 子模块

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Server.UserCenter"]
 	path = Server.UserCenter
 	url = git@github.com:AlgorithmEasy/Server.UserCenter.git
+[submodule "StudentSide"]
+	path = StudentSide
+	url = git@github.com:AlgorithmEasy/StudentSide.git
