添加 ProjectCenter 项目

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "StudentSide"]
 	path = StudentSide
 	url = git@github.com:AlgorithmEasy/StudentSide.git
+[submodule "Server.ProjectCenter"]
+	path = Server.ProjectCenter
+	url = git@github.com:AlgorithmEasy/Server.ProjectCenter.git
